# open-spyro

./: .gitignore  Cargo.toml  README.md  dev.Dockerfile  example.s
.devcontainer/: devcontainer.json
bin_manager/: Cargo.toml
bin_manager/src/: lib.rs
cmips/: Cargo.toml
cmips/src/: lib.rs
mips/: Cargo.toml  README.md
mips/src/: lib.rs
ps1exe/: Cargo.toml
ps1exe/src/: lib.rs
rom_manager/: Cargo.toml
rom_manager/src/: byte_range.rs  directory_record.rs  fields.rs  lib.rs  primary_volume_descriptor.rs
src/: game.s  main.rs
wad/: Cargo.toml
wad/src/: lib.rs
