[package]
name = "open-spyro"
version = "0.1.0"
edition = "2021"

[dependencies]
bin_manager = { path = "./bin_manager" }
colored = "2.0.4"
mips = { path = "./mips" }
ps1exe = { path = "./ps1exe" }
rom_manager = { path = "./rom_manager" }
wad = { path = "./wad" }

[workspace]
members = ["bin_manager", "mips", "ps1exe", "rom_manager", "wad"]
